--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key:
-            - app-{{ checksum "package.json" }}
+          key: app-{{ checksum "package.json" }}
 
   deploy_to_s3:
     docker:
