--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,51 +1,64 @@
 version: 2.1
-jobs:
-
-  build:
+executors:
+  app_executor:
     docker:
       - image: circleci/node:latest
     working_directory: ~/project
+
+aliases:
+  - &show_current_branch:
+    run:
+      name: Show current branch
+      command: echo ${CIRCLE_BRANCH}
+  - &restore_cache:
+    restore_cache:
+      keys:
+        - app-{{ checksum "package.json" }}
+        - app-
+  - &install_dependencies:
+    run:
+      name: Install dependencies
+      command: npm install
+  - &save_cache:
+    save_cache:
+      paths:
+        - node_modules
+      key: app-{{ checksum "package.json" }}
+  - &install_aws_cli:
+    run:
+      name: Installing AWS CLI
+      working_directory: /
+      command: |
+        sudo apt-get -y -qq update
+        sudo apt-get install -y awscli
+        sudo apt-get install -y python-pip python-dev build-essential
+  - &build_frontend:
+    run:
+      name: Build Frontend
+      command: |
+        npm install
+        npm run build
+        cd build
+        zip ../build.zip -r * .[^.]*
+        echo "Build successful"
+
+jobs:
+  build:
+    executor: app_executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      - restore_cache:
-          keys:
-            - app-{{ checksum "package.json" }}
-            - app-
-      - run:
-          name: Install dependencies
-          command: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: app-{{ checksum "package.json" }}
+      - *show_current_branch
+      - *restore_cache
+      - *install_dependencies
+      - *save_cache
 
   deploy_to_s3:
-    docker:
-      - image: circleci/node:latest
-    working_directory: ~/project
+    executor: app_executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      - run:
-          name: Installing AWS CLI
-          working_directory: /
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get install -y awscli
-            sudo apt-get install -y python-pip python-dev build-essential
-      - run:
-          name: Build Frontend
-          command: |
-            npm install
-            npm run build
-            cd build
-            zip ../build.zip -r * .[^.]*
-            echo "Build successful"
+      - *show_current_branch
+      - *install_aws_cli
+      - *build_frontend
       - run:
           name: Deploy Frontend to S3
           command: |
@@ -60,29 +73,12 @@ jobs:
             fi
           
   deploy_to_cloudfront:
-    docker:
-      - image: circleci/node:latest
-    working_directory: ~/project
+    executor: app_executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      - run:
-          name: Installing AWS CLI
-          working_directory: /
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get install -y awscli
-            sudo apt-get install -y python-pip python-dev build-essential
-      - run:
-          name: Build Frontend
-          command: |
-            npm install
-            npm run build
-            cd build
-            zip ../build.zip -r * .[^.]*
-            echo "Build successful"
+      - *show_current_branch
+      - *install_aws_cli
+      - *build_frontend
       - run:
           name: Deploy Frontend to CloudFront
           command: |
