--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ executors:
     working_directory: ~/project
 
 aliases:
-  - &show_current_branch:
+  - &show_current_branch
     run:
       name: Show current branch
       command: echo ${CIRCLE_BRANCH}
@@ -15,16 +15,16 @@ aliases:
       keys:
         - app-{{ checksum "package.json" }}
         - app-
-  - &install_dependencies:
+  - &install_dependencies
     run:
       name: Install dependencies
       command: npm install
-  - &save_cache:
+  - &save_cache
     save_cache:
       paths:
         - node_modules
       key: app-{{ checksum "package.json" }}
-  - &install_aws_cli:
+  - &install_aws_cli
     run:
       name: Installing AWS CLI
       working_directory: /
@@ -32,7 +32,7 @@ aliases:
         sudo apt-get -y -qq update
         sudo apt-get install -y awscli
         sudo apt-get install -y python-pip python-dev build-essential
-  - &build_frontend:
+  - &build_frontend
     run:
       name: Build Frontend
       command: |
