Fix the last alias

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ aliases:
     run:
       name: Show current branch
       command: echo ${CIRCLE_BRANCH}
-  - &restore_cache:
+  - &restore_cache
     restore_cache:
       keys:
         - app-{{ checksum "package.json" }}
