Add both jobs to deploy requirements

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,6 +137,7 @@ workflows:
                 - production 
       - deploy_to_s3:
           requires:
+            - linting
             - prettier
           filters:
             branches:
