--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
       - setup_remote_docker
       - *restore_cache
       - run: docker login -u "${DOCKER_HUB_USER}" -p "${DOCKER_HUB_PASSWORD}"
-      - run: docker build -t "${IMAGE_NAME}":latest ./frontend
+      - run: docker build -t "${IMAGE_NAME}":latest .
       - run:
           name: Publish to DockerHub
           command: |
